--- a/templates/KITS/base.html
+++ b/templates/KITS/base.html
@@ -29,7 +29,7 @@
     <a class="navbar-brand" href="{% url 'KITS:home' %}">
         <!-- Logo is here -->
       <img src="{% static 'images/box_icon.png' %}" alt="" width="30" height="30" class="d-inline-block align-self-center">
-      KITS
+      <b>KITS</b>
     </a>
     <div class="collapse navbar-collapse justify-content-center" id="navbarText">
       <div class="navbar-nav mb-2 mb-lg-0">
