Added IDs for automated test cases, resolved migration warnings with timezone.now defaults

--- a/templates/KITS/kit_ordering_add.html
+++ b/templates/KITS/kit_ordering_add.html
@@ -4,7 +4,7 @@
 {% block content %}
 
     <div class="container-fluid">
-        <H2>Study {{study.IRB_number}}: Add Kit Ordering Information</H2>
+        <H2 id="kit_order_add">Study {{study.IRB_number}}: Add Kit Ordering Information</H2>
         <hr>
 
         <form method="POST" class="kit-form" enctype="multipart/form-data">{% csrf_token %}
