--- a/templates/KITS/study_list.html
+++ b/templates/KITS/study_list.html
@@ -5,7 +5,7 @@
 
     <div class="container-fluid">
 
-        <H2>Studies</H2>
+        <H2 id="study_list">Studies</H2>
 
         {% if messages %}
             {% for message in messages %}
