Study Activity report

--- a/templates/KITS/base.html
+++ b/templates/KITS/base.html
@@ -51,9 +51,10 @@
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" href="{% url 'KITS:report_expiredkits' %}">Expired Kit List</a></li>
               <li><a class="dropdown-item" href="{% url 'KITS:report_expiredkits_studies' %}">Studies w/ Expired Kits</a></li>
-              <li><a class="dropdown-item" href="{% url 'KITS:report_activestudies' %}">Study Activity</a></li>
+              <li><a class="dropdown-item" href="{% url 'KITS:report_activestudies' %}">Kit Activity</a></li>
               <li><a class="dropdown-item" href="{% url 'KITS:user_list' %}">User Activity</a></li>
               <li><a class="dropdown-item" href="{% url 'KITS:report_storageusage' %}">Storage Summary</a></li>
+              <li><a class="dropdown-item" href="{% url 'KITS:report_studyactivity' %}">Study Activity</a></li>
           </ul>
         </div>
         <a class="nav-link" href="{% url 'KITS:list_history' %}">Kit Instance Changes</a>
