--- a/templates/KITS/report_activestudies.html
+++ b/templates/KITS/report_activestudies.html
@@ -33,7 +33,7 @@
     {% endif %}
 
     <div class="container-fluid">
-        <H2>Reports - Study Activity</H2>
+        <H2>Reports - Kit Activity</H2>
         <hr>
 
         <form method="POST">
