Added check for study status to not allow kit order and requisition changes when study is closed

--- a/templates/KITS/home.html
+++ b/templates/KITS/home.html
@@ -10,7 +10,7 @@
             <h1>Welcome to KITS!</h1>
             <p>
                 The Kit Inventory Tracking System application was created to help clinical trial sites <br />
-                track their research kits used in the multiple studies conducted by the sites.
+                track their research kits used in the studies conducted therein.
             </p>
 
         {% if not user.is_authenticated %}
