--- a/templates/KITS/list_history.html
+++ b/templates/KITS/list_history.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:background-color="http://www.w3.org/1999/xhtml">
+<html lang="en">
 {% extends 'KITS/base.html' %}
 {% block content %}
 
