--- a/templates/KITS/base.html
+++ b/templates/KITS/base.html
@@ -11,7 +11,7 @@
   <!-- Add additional CSS in static file -->
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/box_icon.png' %}">
 
     <!-- Add Bootstrap JS plugins for certain CSS components -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
