--- a/templates/KITS/help.html
+++ b/templates/KITS/help.html
@@ -2,10 +2,10 @@
 <html lang="en">
 {% extends 'KITS/base.html' %}
 {% block content %}
-
-    <a class="container-fluid">
-        <iframe src="https://docs.google.com/document/d/e/2PACX-1vSVA5j_vFKAT5WrPxaRFboC4iZuVwBVtLqh8uXyssO4zGPStNcKsWhXDm2WU0wCm2g6_gqOxrn4xYih/pub?embedded=true" width=80% height=850  title="Help Guide" allow="fullscreen"></iframe>
-    </a>
+    <div class="d-flex justify-content-center">
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vSVA5j_vFKAT5WrPxaRFboC4iZuVwBVtLqh8uXyssO4zGPStNcKsWhXDm2WU0wCm2g6_gqOxrn4xYih/pub?embedded=true"
+                width=80% height=850  title="Help Guide" allow="fullscreen"></iframe>
+    </div>
 {% endblock %}
 
 </html>
