--- a/templates/KITS/kit_list.html
+++ b/templates/KITS/kit_list.html
@@ -24,7 +24,7 @@
         <table class="table table-striped table-bordered table-secondary">
             <thead>
             <tr class="bg-info">
-                <th>IRB_number</th>
+                <th>IRB Number</th>
                 <th>Name of Kit</th>
 
                 <th colspan="5">Actions</th>
