--- a/templates/KITS/study_list.html
+++ b/templates/KITS/study_list.html
@@ -25,7 +25,7 @@
         <table class="table table-striped table-secondary table-bordered table-hover">
             <thead>
             <tr>
-                <th>IRB</th>
+                <th>IRB Number</th>
                 <th>Pet Name</th>
                 <th>Study Status</th>
                 <th>Actions</th>
@@ -38,9 +38,11 @@
                 <td>{{ study.pet_name }}</td>
                 <td>{{ study.status }}</td>
                 <td><a href="{% url 'KITS:study_detail' pk=study.pk %}" class="btn-sm btn-primary">Details</a>
+                    {% if study.status != 'Closed' %}
                     <a href="{% url 'KITS:study_archive' pk=study.pk %}"
                         onclick="return confirm('Are you sure you want to archive {{ study.pet_name }}?')"
                         class="btn-sm btn-danger">Archive</a>
+                    {% endif %}
                 </td>
             </tr>
             {% endfor %}
